2006-12-08 Raul Mateos  <raulofpandora@gmail.com>
	
	* include/config.php: Changed build
	
	* images/info.gif: New file
	
	* include/styles/pandora.css: Created new style and modified others
	
	* operation/agentes/*.php, operation/servers/*.php, godmode/agentes/*.php,
	godmode/servers/*.php,: Close some HTML tags. Changed style for not
	found items.

2006-12-07 Raul Mateos  <raulofpandora@gmail.com>
	
	* include/config.php: Changed build
	
	* operation/snmp/*: Close some HTML tags. Changed style 
	for not found items.
	
	* operation/servers/view_server.php: Close some HTML tags. Changed style 
	for not found items.
	
2006-12-04 Raul Mateos  <raulofpandora@gmail.com>

	* help/[en|es]/images/servers1.png, servers2.png: New files.
	
	* help/[en|es]/chap2.php, chap7.php: Update files.
	
	* godmode/admin_access_logs.php: Add help icon.

2006-12-03 Sancho Lerena <slerena@artica.es>

        * godmode/agentes/configurar_agente.php: Fixed bug editing alerts.

2006-12-03 Raul Mateos  <raulofpandora@gmail.com>

	* include/styles/pandora.css: new style for not found items. Join styles.
	
	* operation/events/events.php: Add filter to events by group. Changed
	style for not found items.
	
	* operation/agentes/estado_agente.php, status_monitor.php,
	estado_alertas.php: Add name to filter combo. Changed style for not
	found items.

	* operation/incidents/incident.php: Changed style for not found items.
	
	* images/cancel.gif: Changed image to one with smaller size.

2006-11-27 Raul Mateos  <raulofpandora@gmail.com>

	* general/footer.php: Add variable $time to get time from server which
	PHP < 5.1. Style correction.

2006-11-23 Raul Mateos  <raulofpandora@gmail.com>

	* general/footer.php: Changed text from Pandora to Pandora FMS.

2006-11-23  Sancho Lerena  <slerena@artica.es>

    * agentes/estado_ultimopaquete.php: Added "border=0" to some graphic.
	Fixed typo in hourly graph.

	* agentes/estado_generalagente.php: Added "border=0" in setup icon.
