@@ -3,111 +3,77 @@
 	color: #000;
 	text-decoration: none;
 	}
-#god a:hover {
-	background-color: #efefbd;
-	}
 #god li {
-	padding: 2px 0px 2px 30px;
 	position: relative;
 	left: 1px;
 	width: 99%;
 	border-bottom: 1px solid #d4d4d4;
 	border-top: 1px solid #ffffff;
 	}
-#god1 li, #god2 li, #god3 li, #god4 li, #god5 li, #god6 li, #god7 li, #god8 li, #god1s li, #god2s li, #god3s li, #god4s li, #god5s li, #god6s li, #god7s li, #god8s li {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	padding-right: 0px;
+#god1 li, #god2 li, #god3 li, #god4 li, #god5 li, #god6 li, #god7 li, #god8 li, #god1s li, 
+#god2s li, #god3s li, #god4s li, #god5s li, #god6s li, #god7s li, #god8s li {
+	padding: 0px 0px 0px 30px;
 	}
-div#god1>ul, div#god2>ul, div#god3>ul, div#god4>ul, div#god5>ul, div#god6>ul, div#god7>ul, div#god8>ul, div#god1s>ul, div#god2s>ul, div#god3s>ul, div#god4s>ul, div#god5s>ul, div#god6s>ul, div#god7s>ul, div#god8s>ul {
+div#god1>ul, div#god2>ul, div#god3>ul, div#god4>ul, div#god5>ul, div#god6>ul, 
+div#god7>ul, div#god8>ul, div#god1s>ul, div#god2s>ul, div#god3s>ul, div#god4s>ul, 
+div#god5s>ul, div#god6s>ul, div#god7s>ul, div#god8s>ul {
 	width: 124px;
 	}
-#god1 li {
-	background: url(../../images/god1.gif) no-repeat;
-	background-position: 4px 2px;
+#god1 li, #god1 li:hover, #god1s li  {
+	background: url(../../images/god1.gif) no-repeat 4px 2px;
 	}
-#god2 li {
-	background: url(../../images/god2.gif) no-repeat;
-	background-position: 4px 3px;
+#god2 li, #god2 li:hover, #god2s li{
+	background: url(../../images/god2.gif) no-repeat 4px 3px;
 	}
-#god3 li {
-	background: url(../../images/god3.gif) no-repeat;
-	background-position: 5px 2px;
+#god3 li, #god3 li:hover, #god3s li {
+	background: url(../../images/god3.gif) no-repeat 5px 2px;
 	}
-#god4 li {
-	background: url(../../images/god4.gif) no-repeat;
-	background-position: 5px 4px;
+#god4 li, #god4 li:hover, #god4s li{
+	background: url(../../images/god4.gif) no-repeat 5px 4px;
 	}
-#god5 li {
-	background: url(../../images/god5.gif) no-repeat;
-	background-position: 3px 3px;
+#god5 li, #god5 li:hover, #god5s li {
+	background: url(../../images/god5.gif) no-repeat 3px 3px;
 	}
-#god6 li {
-	background: url(../../images/god6.gif) no-repeat;
-	background-position: 4px 3px;
+#god6 li, #god6 li:hover, #god6s li {
+	background: url(../../images/god6.gif) no-repeat 4px 3px;
 	}
-#god7 li {
-	background: url(../../images/god7.gif) no-repeat;
-	background-position: 4px 3px;
+#god7 li, #god7 li:hover, #god7s li {
+	background: url(../../images/god7.gif) no-repeat 4px 3px;
 	}
-#god8 li {background: url(../../images/god8.gif) no-repeat;
-	background-position: 5px 3px;
-	}
-#god1 li:hover, #god1s li {
-	background: #efefbd url(../../images/god1.gif) no-repeat;
-	background-position: 4px 2px;
-	}
-#god2 li:hover, #god2s li {
-	background: #efefbd url(../../images/god2.gif) no-repeat;
-	background-position: 4px 3px;
-	}
-#god3 li:hover, #god3s li {
-	background: #efefbd url(../../images/god3.gif) no-repeat;
-	background-position: 5px 2px;
-	}
-#god4 li:hover, #god4s li {
-	background: #efefbd url(../../images/god4.gif) no-repeat;
-	background-position: 5px 4px;
-	}
-#god5 li:hover, #god5s li {
-	background: #efefbd url(../../images/god5.gif) no-repeat;
-	background-position: 3px 3px;
-	}
-#god6 li:hover, #god6s li {
-	background: #efefbd url(../../images/god6.gif) no-repeat;
-	background-position: 4px 3px;
-	}
-#god7 li:hover, #god7s li {
-	background: #efefbd url(../../images/god7.gif) no-repeat;
-	background-position: 4px 3px;
-	}
-#god8 li:hover, #god8s li {background: #efefbd url(../../images/god8.gif) no-repeat;
-	background-position: 5px 3px;
+#god8 li, #god8 li:hover, #god8s li {
+	background: url(../../images/god8.gif) no-repeat 5px 3px;
 	}
 #arrowg1 ul, #arrowg2 ul, #arrowg3 ul, #arrowg4 ul, #arrowg5 ul {
 	padding: 0px 0px 0px 0px;
 	list-style: none;
 	} 
-#arrowg1 li, #arrowg2 li, #arrowg3 li, #arrowg4 li, #arrowg5 li, #arrowgs1 li, #arrowgs2 li, #arrowgs3 li, #arrowgs4 li, #arrowgs5 li {
+#arrowg1 li, #arrowg2 li, #arrowg3 li, #arrowg4 li, #arrowg5 li, #arrowgs1 li, 
+#arrowgs2 li, #arrowgs3 li, #arrowgs4 li, #arrowgs5 li {
 	padding: 0px 0px 0px 15px;
-	background: #f5f5dc url(../../images/arrow.gif) no-repeat;
-	background-position: 2px 4px;
+	background: #f5f5dc url(../../images/arrow.gif) no-repeat 2px 4px;
 	position: relative;
 	left: 30px;
 	width: 80%;
 	}
-div#arrowg1>ul, div#arrowg2>ul, div#arrowg3>ul, div#arrowg4>ul, div#arrowg5>ul, div#arrowgs1>ul, div#arrowgs2>ul, div#arrowgs3>ul,div#arrowgs4>ul, div#arrowgs5>ul {
+div#arrowg1>ul, div#arrowg2>ul, div#arrowg3>ul, div#arrowg4>ul, div#arrowg5>ul, 
+div#arrowgs1>ul, div#arrowgs2>ul, div#arrowgs3>ul,div#arrowgs4>ul, div#arrowgs5>ul {
 	width: 88%;
 	}
-#arrowg1 li:hover, #arrowg2 li:hover, #arrowg3 li:hover, #arrowg4 li:hover, #arrowg5 li:hover, #arrowgs1 li, #arrowgs2 li, #arrowgs3 li, #arrowgs4 li, #arrowgs5 li {
-	background: #efefbd url(../../images/arrow.gif) no-repeat;
-	background-position: 2px 4px;
+#arrowg1 li:hover, #arrowg2 li:hover, #arrowg3 li:hover, #arrowg4 li:hover, 
+#arrowg5 li:hover, #arrowgs1 li, #arrowgs2 li, #arrowgs3 li, #arrowgs4 li, #arrowgs5 li {
+	background: url(../../images/arrow.gif) no-repeat 2px 4px;
 	}
 div#menug {
-	background-color:#f5f5dc;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #4a6629;
+	background-color: #f5f5dc;
+	border: 1px solid #4a6629;
 	width: 155px;
 	margin-bottom: 15px;
+	}
+#god a:hover,
+#god1 li:hover, #god1s li, #god2 li:hover, #god2s li, #god3 li:hover, #god3s li,
+#god4 li:hover, #god4s li, #god5 li:hover, #god5s li, #god6 li:hover, #god6s li,
+#god7 li:hover, #god7s li, #god8 li:hover, #god8s li, 
+#arrowg1 li:hover, #arrowg2 li:hover, #arrowg3 li:hover, #arrowg4 li:hover, 
+#arrowg5 li:hover, #arrowgs1 li, #arrowgs2 li, #arrowgs3 li, #arrowgs4 li, #arrowgs5 li {
+	background-color: #efefbd;
 	}
