@@ -3,106 +3,74 @@
 	color: #000;
 	text-decoration: none;
 	}
-#op a:hover {
-	background-color: #d4ddc6;
-	text-decoration: none;
-	}
 #op li {
-	padding: 2px 0px 2px 28px;
 	position: relative;
 	left: 0px;
-	width:100%;
+	width: 100%;
 	border-bottom: 1px solid #d4d4d4;
 	border-top: 1px solid #eee;
 	}
-#op1 li, #op2 li, #op3 li, #op4 li, #op5 li, #op6 li, #op7 li, #op1s li, #op2s li, #op3s li, #op4s li, #op5s li, #op6s li, #op7s li {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	padding-right: 1px;
+#op1 li, #op2 li, #op3 li, #op4 li, #op5 li, #op6 li, #op7 li, 
+#op1s li, #op2s li, #op3s li, #op4s li, #op5s li, #op6s li, #op7s li {
+	padding: 0px 0px 0px 28px;
 	}
-div#op1>ul, div#op2>ul, div#op3>ul, div#op4>ul, div#op5>ul, div#op6>ul, div#op7>ul, div#op1s>ul, div#op2s>ul, div#op3s>ul, div#op4s>ul, div#op5s>ul, div#op6s>ul, div#op7s>ul  {
-	width:126px;
+div#op1>ul, div#op2>ul, div#op3>ul, div#op4>ul, div#op5>ul, div#op6>ul, div#op7>ul, 
+div#op1s>ul, div#op2s>ul, div#op3s>ul, div#op4s>ul, div#op5s>ul, div#op6s>ul, div#op7s>ul  {
+	width: 126px;
 	}
-#op1 li {
-	background: url(../../images/op1.gif) no-repeat;
-	background-position: 4px 3px;
+#op1 li , #op1 li:hover, #op1s li {
+	background: url(../../images/op1.gif) no-repeat 4px 3px;
 	}
-#op2 li {
-	background: url(../../images/op2.gif) no-repeat;
-	background-position: 3px 3px;
+#op2 li, #op2 li:hover, #op2s li {
+	background: url(../../images/op2.gif) no-repeat 3px 3px;
 	}
-#op3 li {
-	background: url(../../images/op3.gif) no-repeat;
-	background-position: 5px 3px;
+#op3 li, #op3 li:hover, #op3s li {
+	background: url(../../images/op3.gif) no-repeat 5px 3px;
 	}
-#op4 li {
-	background: url(../../images/op4.gif) no-repeat;
-	background-position: 5px 3px;
+#op4 li, #op4 li:hover, #op4s li {
+	background: url(../../images/op4.gif) no-repeat 5px 3px;
 	}
-#op5 li {
-	background: url(../../images/op5.gif) no-repeat;
-	background-position: 7px 3px;
+#op5 li, #op5 li:hover, #op5s li {
+	background: url(../../images/op5.gif) no-repeat 7px 3px;
 	}
-#op6 li {
-	background: url(../../images/op6.gif) no-repeat;
-	background-position: 4px 5px;
+#op6 li, #op6 li:hover, #op6s li {
+	background: url(../../images/op6.gif) no-repeat 4px 5px;
 	}
-#op7 li {
-	background: url(../../images/op7.gif) no-repeat;
-	background-position: 1px 0px;
-	}
-#op1 li:hover, #op1s li {
-	background: #d4ddc6 url(../../images/op1.gif) no-repeat;
-	background-position: 4px 3px;
-	}
-#op2 li:hover, #op2s li {
-	background: #d4ddc6 url(../../images/op2.gif) no-repeat;
-	background-position: 3px 3px;
-	}
-#op3 li:hover, #op3s li {
-	background: #d4ddc6 url(../../images/op3.gif) no-repeat;
-	background-position: 5px 3px;
-	}
-#op4 li:hover, #op4s li {
-	background: #d4ddc6 url(../../images/op4.gif) no-repeat;
-	background-position: 5px 3px;
-	}
-#op5 li:hover, #op5s li {
-	background: #d4ddc6 url(../../images/op5.gif) no-repeat;
-	background-position: 7px 3px;
-	}
-#op6 li:hover, #op6s li {
-	background: #d4ddc6 url(../../images/op6.gif) no-repeat;
-	background-position: 4px 5px;
-	}
-#op7 li:hover, #op7s li {
-	background: #d4ddc6 url(../../images/op7.gif) no-repeat;
-	background-position: 1px 0px;
+#op7 li, #op7 li:hover, #op7s li  {
+	background: url(../../images/op7.gif) no-repeat 1px 0px;
 	}
 #arrow1 ul, #arrow2 ul, #arrow3 ul, #arrow4 ul, #arrow5 ul {
 	padding: 0px 0px 0px 0px;
 	list-style: none;
 	} 
-#arrow1 li, #arrows1 li, #arrow2 li, #arrows2 li, #arrow3 li, #arrows3 li, #arrow4 li, #arrows4 li, #arrow5 li, #arrows5 li {
+#arrow1 li, #arrows1 li, #arrow2 li, #arrows2 li, #arrow3 li, #arrows3 li, 
+#arrow4 li, #arrows4 li, #arrow5 li, #arrows5 li {
 	padding: 0px 0px 0px 15px;
-	background: #e6e9cd url(../../images/arrow.gif) no-repeat;
-	background-position: 2px 4px;
+	background: #e6e9cd url(../../images/arrow.gif) no-repeat 2px 4px;
 	position: relative;
 	left: 26px;
 	width: 82%;
 	}
-div#arrow1>ul, div#arrows1>ul, div#arrow2>ul, div#arrows2>ul, div#arrow3>ul, div#arrows3>ul, div#arrow4>ul, div#arrows4>ul, div#arrow5>ul, div#arrows5>ul {
+div#arrow1>ul, div#arrows1>ul, div#arrow2>ul, div#arrows2>ul, div#arrow3>ul, 
+div#arrows3>ul, div#arrow4>ul, div#arrows4>ul, div#arrow5>ul, div#arrows5>ul {
 	width: 89%;
 	}
-#arrow1 li:hover, #arrows1 li, #arrow2 li:hover, #arrows2 li, #arrow3 li:hover, #arrows3 li, #arrow4 li:hover, #arrows4 li, #arrow5 li:hover, #arrows5 li {
-	background: #d4ddc6 url(../../images/arrow.gif) no-repeat;
-	background-position: 2px 4px;
+#arrow1 li:hover, #arrows1 li, #arrow2 li:hover, #arrows2 li, #arrow3 li:hover, 
+#arrows3 li, #arrow4 li:hover, #arrows4 li, #arrow5 li:hover, #arrows5 li {
+	background: url(../../images/arrow.gif) no-repeat 2px 4px;
 	}
 div#menuop {
 	background-color: #e6e9cd;
-	border-width: 1px;
-	border-style: solid;
-	border-color:#4a6629;
+	border: 1px solid #4a6629;
 	width: 155px;
 	margin-bottom: 15px;
 	}
+#op a:hover ,
+#op1 li:hover, #op1s li , #op2 li:hover, #op2s li , #op3 li:hover, #op3s li ,
+#op4 li:hover, #op4s li , #op5 li:hover, #op5s li , #op6 li:hover, #op6s li ,
+#arrow1 li:hover, #arrows1 li, #arrow2 li:hover, #arrows2 li,
+#arrow3 li:hover, #arrows3 li, #arrow4 li:hover, #arrows4 li,
+#arrow5 li:hover, #arrows5 li
+{
+	background-color: #d4ddc6;
+}
