@@ -1,3 +1,7 @@
+2006-12-14 Raul Mateos  <raulofpandora@gmail.com>
+
+	* include/styles/*.css: Simplify styles. First Try.
+
 2006-12-08 Raul Mateos  <raulofpandora@gmail.com>
 	
 	* include/config.php: Changed build
